# amortizationCalcQt

./: CMakeLists.txt  README.md
src/: amortizationCalcQt.cpp  amortizationCalcQt.h
